package com.lzl.design_pattern.P_Mediator;

/**
 * @author lizanle
 * @data 2019/4/7 9:25 PM
 */
public interface Mediator {

}
